--- a/calculadora.html
+++ b/calculadora.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
 
@@ -7,16 +8,22 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 	<style>
-		body{
+		body
+	{
         background-color:rgb(0, 0, 0);
     }
-	div{
+	#display{
+		margin: 10px;
+		width: 190px;
+	}
+	div
+	{
         position:absolute;
         top: 20px;
 		border: 1px solid aqua;
-        background-color:darkgray;
-        width: 173px;
+        background-color:darkslategrey;
 		text-align: center;
+		width: 210px;
     }
 </style>
 </head>
@@ -36,6 +43,7 @@
 		<input type="button" id="8" value="8" class="btn btn-primary btn-sm" onclick="teclas(8)">
 		<input type="button" id="9" value="9" class="btn btn-primary btn-sm" onclick="teclas(9)">
 		<input type="button" value="*" class="btn btn-warning btn-sm" onclick="multiplica()"></p>
+		<input type="button" value="0" class="btn btn-primary btn-sm" onclick="teclas(0)">
 		<input type="button" value="/" class="btn btn-warning btn-sm" onclick="divide()">
 		<input type="button" value="=" class="btn btn-info btn-sm" onclick="igual()">
 		<input type="button" value="C" class="btn btn-info btn-sm" onclick="clearDisplay()">
@@ -43,7 +51,6 @@
 
 	<script>
 		var valor1, status;
-
 		function clearDisplay() {
 			document.getElementById("display").value = "";
 		}
@@ -94,6 +101,11 @@
 
 		function teclas(valor) {
 			switch (valor) {
+				case 0:
+					var valor = document.getElementById("display").value;
+					valor += 0;
+					document.getElementById("display").value = valor;
+					break;
 				case 1:
 					var valor = document.getElementById("display").value;
 					valor += 1;
