--- a/calculadora.html
+++ b/calculadora.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
 
@@ -14,17 +13,18 @@
     }
 	#display{
 		margin: 10px;
-		width: 190px;
+		width: 160px;
 	}
 	div
 	{
         position:absolute;
-        top: 20px;
 		border: 1px solid aqua;
         background-color:darkslategrey;
-		text-align: center;
-		width: 210px;
+		padding-bottom: 10px;
     }
+	.btn{
+		margin-left: 10px;	
+	}
 </style>
 </head>
 
